{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 63,
  "lineage": "45cfcf2c-09a1-dd70-e068-157ac4f828fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gatewayterraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048306789197:internet-gateway/igw-0b5c648ddc335d700",
            "id": "igw-0b5c648ddc335d700",
            "owner_id": "048306789197",
            "tags": {
              "Name": "gatewayterraform"
            },
            "tags_all": {
              "Name": "gatewayterraform"
            },
            "vpc_id": "vpc-0508bb8e42b9912a0"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routerraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048306789197:route-table/rtb-0c8d2e301dd3cd656",
            "id": "rtb-0c8d2e301dd3cd656",
            "owner_id": "048306789197",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5c648ddc335d700",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routerraform"
            },
            "tags_all": {
              "Name": "routerraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0508bb8e42b9912a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gatewayterraform",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c579dfc0ed5e3c43",
            "route_table_id": "rtb-0c8d2e301dd3cd656",
            "subnet_id": "subnet-03ff231f726c01dca"
          },
          "dependencies": [
            "aws_internet_gateway.gatewayterraform",
            "aws_route_table.routerraform",
            "aws_subnet.subnet-01",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fa7f1ee59fa6623",
            "route_table_id": "rtb-0c8d2e301dd3cd656",
            "subnet_id": "subnet-0b660885ec41c9759"
          },
          "dependencies": [
            "aws_internet_gateway.gatewayterraform",
            "aws_route_table.routerraform",
            "aws_subnet.subnet-02",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048306789197:security-group/sg-0bd321e1a0827b423",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0bd321e1a0827b423",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "048306789197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0508bb8e42b9912a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048306789197:subnet/subnet-03ff231f726c01dca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ff231f726c01dca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048306789197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-01"
            },
            "tags_all": {
              "Name": "subnet-01"
            },
            "vpc_id": "vpc-0508bb8e42b9912a0"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048306789197:subnet/subnet-0b660885ec41c9759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b660885ec41c9759",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048306789197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-02"
            },
            "tags_all": {
              "Name": "subnet-02"
            },
            "vpc_id": "vpc-0508bb8e42b9912a0"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048306789197:vpc/vpc-0508bb8e42b9912a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0013270ac8e758c8e",
            "default_route_table_id": "rtb-0ba533b170a71b995",
            "default_security_group_id": "sg-074b89cd9ce809fd2",
            "dhcp_options_id": "dopt-06bfa892b2f6d4477",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0508bb8e42b9912a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba533b170a71b995",
            "owner_id": "048306789197",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:048306789197:security-group-rule/sgr-0743e76626b9b6096",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0743e76626b9b6096",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bd321e1a0827b423",
            "security_group_rule_id": "sgr-0743e76626b9b6096",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.terraform"
          ]
        }
      ]
    }
  ]
}